--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
    install:
      runtime-versions:
-         php: 8.1.11
+         php: 8.1
          nodejs: 16
      commands:
          - apt-get update -y
@@ -11,7 +11,8 @@ phases:
          - curl -sS <https://getcomposer.org/installer> | php -- --install-dir=/usr/local/bin --filename=composer
    pre_build:
      commands:
-         - cp .env.staging .env
+        #- cp .env.staging .env
+         - aws s3 cp s3://elasticbeanstalk-us-east-1-424023781758/.env.staging /.env
          - composer install
          - npm install
    build:
