--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,9 +5,9 @@ phases:
          php: 8.1
          nodejs: 16
      commands:
-         - sudo apt-get update -y
-         - sudo apt-get install -y libpq-dev libzip-dev
-         - sudo apt-get install -y php-pgsql
+         - sudo apt update
+         - sudo apt install libpq-dev libzip-dev
+         - sudo apt install php-pgsql
          - curl -sS <https://getcomposer.org/installer> | php -- --install-dir=/usr/local/bin --filename=composer
    pre_build:
      commands:
