--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
          - npm install
    build:
      commands:
-         - npm run production
+         - npm run build
          - php artisan migrate
          - php artisan db:seed
 artifacts:
