--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
    build:
      commands:
          - npm run build
-         - php artisan migrate
+         - php artisan migrate --force
          - php artisan db:seed
 artifacts:
    files:
