--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
          - npm install
    build:
      commands:
-         - npm run dev
+         #- npm run dev
          - php artisan migrate --force
          - php artisan db:seed
 artifacts:
