--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
    pre_build:
      commands:
         #- cp .env.staging .env
-         - aws s3 cp s3://elasticbeanstalk-us-east-1-424023781758/env.staging .env
+         - aws s3 cp s3://elasticbeanstalk-us-east-1-424023781758/env.staging /.env
          - composer install
          - npm cache clean --force
          - npm install
