--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,12 +10,11 @@ phases:
         #- cp .env.staging .env
          - aws s3 cp s3://elasticbeanstalk-us-east-1-424023781758/env.staging /.env
          - composer install
-         - npm cache clean --force
          - npm install
-        # - npm run dev
+        #- npm run dev
    build:
      commands:
-         - php artisan migrate --force
+         - php artisan migrate
          - php artisan db:seed
 artifacts:
    files:
